Y1/Module_2_Object_Oriented_Programming/intellijml-1.1.7/src/test/typeAnnotatorTestData/JavaParenthesizedExpressions.java
package typeAnnotatorTestData;

public class JavaParenthesizedExpressions {
    int test;

    //@invariant (((((8 > 7)))));
    //@invariant (((test>8) && ((test > 7))));
    //@invariant <error descr="Not a valid expression">() (8 >7)</error>;
}
